Iris: adjusted code to coding guidelines