@@ -1,5 +1,7 @@
 package de.tum.cit.aet.artemis.iris.service;
 
+import java.time.Duration;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
@@ -7,16 +9,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ScheduledFuture;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.scheduling.TaskScheduler;
 import org.springframework.stereotype.Service;
 
 import de.tum.cit.aet.artemis.account.domain.User;
@@ -33,15 +39,19 @@ import de.tum.cit.aet.artemis.iris.dto.IrisAssessmentProgrammingStudentParticipa
 import de.tum.cit.aet.artemis.iris.dto.IrisAssessmentProgrammingStudentParticipationProjection;
 import de.tum.cit.aet.artemis.iris.dto.IrisAssessmentReviewSearchDTO;
 import de.tum.cit.aet.artemis.iris.dto.IrisQAExchangeDTO;
+import de.tum.cit.aet.artemis.iris.dto.IrisQuizTimerDTO;
 import de.tum.cit.aet.artemis.iris.dto.IrisVerdictDTO;
 import de.tum.cit.aet.artemis.iris.repository.IrisAssessmentRepository;
 import de.tum.cit.aet.artemis.iris.repository.IrisChatSessionRepository;
+import de.tum.cit.aet.artemis.iris.service.settings.IrisSettingsService;
+import de.tum.cit.aet.artemis.iris.service.websocket.IrisAssessmentQuizWebsocketService;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExercise;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExerciseStudentParticipation;
+import de.tum.cit.aet.artemis.programming.repository.ProgrammingExerciseRepository;
 import de.tum.cit.aet.artemis.programming.repository.ProgrammingExerciseStudentParticipationRepository;
 
 /**
- * Service for managing state and result of an iris assessment.
+ * Service for managing state and result of an iris assessment and the in-class quiz mode management by the instructor.
  */
 @Lazy
 @Service
@@ -56,13 +66,28 @@ public class IrisAssessmentReviewService {
 
     private final StudentParticipationRepository studentParticipationRepository;
 
+    private final IrisAssessmentQuizWebsocketService irisAssessmentQuizWebsocketService;
+
+    private final IrisSettingsService irisSettingsService;
+
+    private final ProgrammingExerciseRepository programmingExerciseRepository;
+
+    private final TaskScheduler taskScheduler;
+
+    private final Map<Long, ScheduledFuture<?>> availableInClassQuizTimers = new ConcurrentHashMap<>();
+
     public IrisAssessmentReviewService(IrisAssessmentRepository irisAssessmentRepository,
             ProgrammingExerciseStudentParticipationRepository programmingExerciseStudentParticipationRepository, IrisChatSessionRepository irisChatSessionRepository,
-            StudentParticipationRepository studentParticipationRepository) {
+            StudentParticipationRepository studentParticipationRepository, IrisAssessmentQuizWebsocketService irisAssessmentQuizWebsocketService,
+            IrisSettingsService irisSettingsService, ProgrammingExerciseRepository programmingExerciseRepository, @Qualifier("taskScheduler") TaskScheduler taskScheduler) {
         this.irisAssessmentRepository = irisAssessmentRepository;
         this.programmingExerciseStudentParticipationRepository = programmingExerciseStudentParticipationRepository;
         this.irisChatSessionRepository = irisChatSessionRepository;
         this.studentParticipationRepository = studentParticipationRepository;
+        this.irisAssessmentQuizWebsocketService = irisAssessmentQuizWebsocketService;
+        this.irisSettingsService = irisSettingsService;
+        this.programmingExerciseRepository = programmingExerciseRepository;
+        this.taskScheduler = taskScheduler;
     }
 
     private static final String FILTER_ACCEPTED = "Accepted";
@@ -152,6 +177,29 @@ public class IrisAssessmentReviewService {
         return new IrisAssessmentReviewSearchResult(new PageImpl<>(dtos, pageable, idPage.getTotalElements()), participationsPerFilter);
     }
 
+    /**
+     * Finds all non-practice participations of one programming exercise whose latest result has a positive score.
+     *
+     * @param exerciseId the exercise id
+     * @param inClass    whether to use the in-class Iris assessment relation
+     * @return matching participation DTOs
+     */
+    public Set<IrisAssessmentProgrammingStudentParticipationDTO> findAllNonPracticeParticipationsNonZeroLatestScoreForExercise(long exerciseId, boolean inClass) {
+        Set<IrisAssessmentProgrammingStudentParticipationProjection> participationProjections = inClass
+                ? programmingExerciseStudentParticipationRepository
+                        .findAllNonPracticeIrisAssessmentInClassParticipationProjectionsByExerciseIdAndLatestResultScoreGreaterThanZero(exerciseId)
+                : programmingExerciseStudentParticipationRepository
+                        .findAllNonPracticeIrisAssessmentParticipationProjectionsByExerciseIdAndLatestResultScoreGreaterThanZero(exerciseId);
+        if (participationProjections.isEmpty()) {
+            return Set.of();
+        }
+
+        List<Long> participationIds = participationProjections.stream().map(IrisAssessmentProgrammingStudentParticipationProjection::id).toList();
+        Map<Long, Integer> submissionCountMap = studentParticipationRepository.countSubmissionsPerParticipationByIdsAsMap(participationIds);
+
+        return participationProjections.stream().map(projection -> projection.toDto(submissionCountMap.get(projection.id()))).collect(Collectors.toSet());
+    }
+
     private Map<String, Long> countParticipationsPerFilter(long courseId, String searchPattern, boolean inClass) {
         Map<String, Long> counts = new LinkedHashMap<>();
         counts.put(FILTER_ALL, countParticipations(courseId, searchPattern, inClass, FilterSelection.none()));
@@ -210,7 +258,7 @@ public class IrisAssessmentReviewService {
      * Accepts the answers in the given {@link IrisAssessment} by updating the review status accordingly.
      *
      * @param assessment the assessment to update
-     * @throws Error if the verdict saved in assessment is invalid
+     * @throws ConflictException if the verdict saved in assessment is invalid
      */
     public void acceptAnswers(IrisAssessment assessment) {
         // If answers were already accepted, nothing must be done
@@ -219,7 +267,7 @@ public class IrisAssessmentReviewService {
         }
 
         if (assessment.getVerdict() == null) {
-            throw new Error("Tried to accept answers for assessment where verdict is null");
+            throw new ConflictException("Tried to accept answers for assessment where verdict is null", "Iris", "irisAssessmentVerdictMissing");
         }
 
         assessment.setVerdictReview(IrisVerdictReview.ACCEPTED);
@@ -230,7 +278,7 @@ public class IrisAssessmentReviewService {
      * Rejects the answers in the given {@link IrisAssessment} by updating the review status accordingly.
      *
      * @param assessment the assessment to update
-     * @throws Error if the verdict saved in assessment is invalid
+     * @throws ConflictException if the verdict saved in assessment is invalid
      */
     public void rejectAnswers(IrisAssessment assessment) {
         // If answers were already rejected, nothing must be done
@@ -239,7 +287,7 @@ public class IrisAssessmentReviewService {
         }
 
         if (assessment.getVerdict() == null) {
-            throw new Error("Tried to reject answers for assessment where verdict is null");
+            throw new ConflictException("Tried to reject answers for assessment where verdict is null", "Iris", "irisAssessmentVerdictMissing");
         }
 
         assessment.setVerdictReview(IrisVerdictReview.REJECTED);
@@ -265,7 +313,7 @@ public class IrisAssessmentReviewService {
      */
     public IrisAssessment createNewAssessment(ProgrammingExerciseStudentParticipation participation, boolean inClass) {
         if (participation.isPracticeMode()) {
-            throw new Error("Tried to create an assessment for a practice participation");
+            throw new IllegalStateException("Tried to create an assessment for a practice participation");
         }
 
         var student = participation.getStudent().orElseThrow();
@@ -290,7 +338,7 @@ public class IrisAssessmentReviewService {
      *
      * @param exercise the programming exercise
      */
-    public void deleteInClassAssessmentsForExercise(ProgrammingExercise exercise) {
+    private void deleteInClassAssessmentsForExercise(ProgrammingExercise exercise) {
         var assessmentIds = programmingExerciseStudentParticipationRepository.findIrisAssessmentInClassIdsByExerciseId(exercise.getId());
         if (assessmentIds.isEmpty()) {
             return;
@@ -324,8 +372,9 @@ public class IrisAssessmentReviewService {
         }
 
         // skip first and drop last message because quiz explanation and quiz_finished messages are not needed
-        List<IrisMessage> irisMessages = session.getMessages().stream().filter(message -> message.getSender().equals(IrisMessageSender.LLM) && message.getInAskUserMode()).skip(1)
-                .collect(Collectors.collectingAndThen(Collectors.toList(), messages -> messages.isEmpty() ? List.of() : messages.subList(0, messages.size() - 1)));
+        List<IrisMessage> llmMessages = session.getMessages().stream().filter(message -> message.getSender().equals(IrisMessageSender.LLM) && message.getInAskUserMode()).skip(1)
+                .toList();
+        List<IrisMessage> irisMessages = llmMessages.isEmpty() ? List.of() : llmMessages.subList(0, llmMessages.size() - 1);
         List<IrisMessage> userMessages = session.getMessages().stream().filter(message -> message.getSender().equals(IrisMessageSender.USER) && message.getInAskUserMode())
                 .toList();
 
@@ -333,6 +382,78 @@ public class IrisAssessmentReviewService {
 
         return IntStream.range(0, maxSize).mapToObj(i -> new IrisQAExchangeDTO(i, i < irisMessages.size() ? irisMessages.get(i).getContent().getFirst().getContentAsString() : "",
                 i < userMessages.size() ? userMessages.get(i).getContent().getFirst().getContentAsString() : "", i < reasoning.size() ? reasoning.get(i) : "")).toList();
+    }
+
+    public void validateInClassQuizIsAvailableOrElseThrow(ProgrammingExercise exercise) {
+        if (getAvailableInClassQuiz(exercise) == null) {
+            throw new ConflictException("The in-class quiz timer has expired or is not active", "Iris", "irisInClassQuizExpired");
+        }
+    }
+
+    /**
+     * Returns the currently active in-class quiz timer for an exercise.
+     *
+     * @param exercise the programming exercise
+     * @return timer information or null if no active timer exists
+     */
+    public IrisQuizTimerDTO getAvailableInClassQuiz(ProgrammingExercise exercise) {
+        var expiresAt = exercise.getIrisInClassQuizTimer();
+        if (expiresAt == null) {
+            return null;
+        }
+
+        var now = ZonedDateTime.now();
+        if (!expiresAt.isAfter(now)) {
+            clearInClassQuizTimer(exercise, expiresAt);
+            return null;
+        }
+
+        var remainingSeconds = Math.max(Duration.between(now, expiresAt).toSeconds(), 0);
+        return new IrisQuizTimerDTO(expiresAt, Math.toIntExact(remainingSeconds));
+    }
+
+    /**
+     * Makes the in-class quiz mode available for students for an exercise.
+     *
+     * @param exercise the exercise for which the in-class quiz should be made available
+     * @return timer information for the active in-class quiz window
+     */
+    public IrisQuizTimerDTO makeInClassQuizAvailable(ProgrammingExercise exercise) {
+        if (exercise.isExamExercise()) {
+            throw new ConflictException("Iris Ask-user Mode is not supported for exam exercises", "Iris", "irisExamExercise");
+        }
+        irisSettingsService.ensureAskUserModeEnabledForExerciseOrElseThrow(exercise);
+        deleteInClassAssessmentsForExercise(exercise);
+
+        var settings = irisSettingsService.getSettingsForExercise(exercise).askUserModeSettings();
+        var timeLimit = settings.timeLimitInClass() * 60;
+        var expiresAt = ZonedDateTime.now().plusMinutes(settings.timeLimitInClass());
+
+        exercise.setIrisInClassQuizTimer(expiresAt);
+        programmingExerciseRepository.save(exercise);
+        scheduleInClassQuizTimerCleanup(exercise.getId(), expiresAt);
+        irisAssessmentQuizWebsocketService.sendInClassQuizStarted(exercise.getId());
+
+        return new IrisQuizTimerDTO(expiresAt, timeLimit);
+    }
+
+    private void scheduleInClassQuizTimerCleanup(long exerciseId, ZonedDateTime expiresAt) {
+        var previousTimer = availableInClassQuizTimers.remove(exerciseId);
+        if (previousTimer != null) {
+            previousTimer.cancel(false);
+        }
+
+        var future = taskScheduler.schedule(() -> programmingExerciseRepository.findById(exerciseId).ifPresent(exercise -> clearInClassQuizTimer(exercise, expiresAt)),
+                expiresAt.toInstant());
+        availableInClassQuizTimers.put(exerciseId, future);
+    }
+
+    private void clearInClassQuizTimer(ProgrammingExercise exercise, ZonedDateTime expectedExpiresAt) {
+        if (Objects.equals(exercise.getIrisInClassQuizTimer(), expectedExpiresAt)) {
+            exercise.setIrisInClassQuizTimer(null);
+            programmingExerciseRepository.save(exercise);
+        }
+        availableInClassQuizTimers.remove(exercise.getId());
     }
 
     private IrisAssessment findOrCreateAssessment(User user, Exercise exercise, boolean inClass, boolean withReasoning) {
